tests/NormalTests/paczka1/small_fuzzy/26697656.err
Error in line 5: eS5xeY75HgM S465 60,3
Error in line 11: S465 S236 57,3
Error in line 14: ldOD S236 91,98
